# transformer

./: README.md  pyproject.toml  requirements.txt
Tokenizer/: tokenizer.py  utils.py
Transformer/components/: input_embedding.py
